<resources>

    <string name="app_name">TeCuidamos</string>
    <string name="main1">Note</string>
    <string name="main2">We recommend you adapt this app to your own needs through the Settings menu, from which you can activate or de-activate any services.</string>
    <string name="main3">Obtaining weather information...</string>
    <string name="main4">Close</string>
    <string name="main5">An error occurred when stopping the fall detection service. Could it be already de-activated?</string>
    <string name="main6">Fall detection service stopped</string>
    <string name="main7">"Safe Zone" service stopped</string>
    <string name="main8">Location service stopped</string>
    <string name="main9">Today it is </string>
    <string name="main10"> very hot, </string>
    <string name="main11"> mildly hot, </string>
    <string name="main12"> somewhat cold, </string>
    <string name="main13"> very cold, </string>
    <string name="main14"> nice out, </string>
    <string name="main15"> it will probably rain, </string>
    <string name="main16"> rain is unlikely, </string>
    <string name="main17"> and there are dangerous, hurricane-strength winds.</string>
    <string name="main18"> and there are very strong winds.</string>
    <string name="main19"> and there are strong winds.</string>
    <string name="main20"> and there is moderate wind.</string>
    <string name="main21"> and it is not windy.</string>
    <string name="main22">"An error occurred when obtaining weather information."</string>
    <string name="main23">Current location</string>
    <string name="main24">Temp: </string>
    <string name="main25">Rain: </string>
    <string name="main26">Wind: </string>
    <string name="config1">Service activation</string>
    <string name="config2">Service settings</string>
    <string name="config3">Temperature settings</string>
    <string name="config4">Restore default values</string>
    <string name="config5">Settings</string>
    <string name="config6">Adjust the settings on your TeCuidamos app to activate or de-activate any services, set warnings, timers and activities, and restore default values.</string>
    <string name="config7">Activate or de-activate any services to better suit your needs.</string>
    <string name="config8">Set warnings and warning timers for your emergency contact.</string>
    <string name="config9">Set the temperature values for the weather information.</string>
    <string name="config10">Are you sure you want to restore default values? This action cannot be undone.</string>
    <string name="config11">Restore</string>
    <string name="config12">Cancel</string>
    <string name="config13">An error occurred when saving your settings.</string>
    <string name="layoutmain1">Medicines</string>
    <string name="layoutmain2">Settings</string>
    <string name="layoutmain3">I am going out!</string>
    <string name="layoutmain4">Stop all services</string>
    <string name="avisodialog1">MEDICINE WARNING</string>
    <string name="avisodialog2">STOP ALARM</string>
    <string name="caidadialog1">FALL DETECTED</string>
    <string name="caidadialog2">Your emergency contact will be sent a message now, alerting them to your fall. Please, cancel this message if this has been a false alarm.</string>
    <string name="caidadialog3">CANCEL ALARM</string>
    <string name="cancelarservicios1">Stop fall detection service</string>
    <string name="cancelarservicios2">Stop "Safe Zone" service</string>
    <string name="cancelarservicios3">Stop location service</string>
    <string name="configactivserviciosdialogon1">Medicine warnings are ON</string>
    <string name="configactivserviciosdialogoff1">Medicine warnings are OFF</string>
    <string name="configactivserviciosdialogon2">"Safe Zone" is ON</string>
    <string name="configactivserviciosdialogoff2">"Safe Zone" is OFF</string>
    <string name="configactivserviciosdialogon3">Location tracking is ON</string>
    <string name="configactivserviciosdialogoff3">Location tracking is OFF</string>
    <string name="configactivserviciosdialogon4">Fall detection when going out is ON</string>
    <string name="configactivserviciosdialogoff4">Fall detection when going out is OFF</string>
    <string name="configactivserviciosdialogon5">At-home fall detection is ON</string>
    <string name="configactivserviciosdialogoff5">At-home fall detection is OFF</string>
    <string name="configserviciosdialog1">Select a sending method</string>
    <string name="configserviciosdialog2">Password</string>
    <string name="configserviciosdialog3">Emergency contact number</string>
    <string name="configserviciosdialog4">Refresh current location</string>
    <string name="configserviciosdialog5">Check "Safe Zone"</string>
    <string name="configserviciosdialog6">Fall sensibility settings</string>
    <string name="configserviciosdialog7">Warning after fall</string>
    <string name="configserviciosdialog8">"Safe Zone" dimensions</string>
    <string name="configtempdialog1">It is very hot if over</string>
    <string name="configtempdialog2">It is hot if over</string>
    <string name="configtempdialog3">It is cold if over</string>
    <string name="configtempdialog4">It if very cold if over</string>
    <string name="configtempdialog5">It is raining if humidity % over</string>
    <string name="dialognuevoaviso1">Medicine name</string>
    <string name="dialognuevoaviso2">Intake times per day</string>
    <string name="dialognuevoaviso3">Amount of available doses remaining</string>
    <string name="avisos0">No warnings</string>
    <string name="avisos1">Insert data</string>
    <string name="avisos2">Intake times per day must be between 1 and 5</string>
    <string name="avisos3">Available doses must be greater than 0</string>
    <string name="avisos4">Incorrect time formatting</string>
    <string name="avisos4b">Introduce time</string>
    <string name="avisos5">Hours not valid</string>
    <string name="avisos6">Minutes not valid</string>
    <string name="avisos7">An error occurred when saving your entry.</string>
    <string name="avisos8">An error occurred when processing time formatting.</string>
    <string name="avisos9">Cancel</string>
    <string name="avisos10">An error occurred when obtaining data.</string>
    <string name="avisos11b">Time </string>
    <string name="avisos11">For example, 15:30</string>
    <string name="avisos12">Cancel</string>
    <string name="avisos13">Remove entry</string>
    <string name="avisos14">Are you sure you want to remove this entry? There will be no further warnings.</string>
    <string name="avisos15">Remove</string>
    <string name="avisos16">Add dose</string>
    <string name="avisos17">Change</string>
    <string name="avisos18">Intake times per day: </string>
    <string name="avisos19">Time: </string>
    <string name="avisos20">Remaining doses: </string>
    <string name="avisos21">Remaining pills: </string>
    <string name="avisos22">Remove</string>
    <string name="caidaAlarm1">TeCuidamos: We have detected your relative has suffered a fall. They are located at </string>
    <string name="caidaAlarm2">TeCuidamos: Fall detection</string>
    <string name="caidaAlarm3">We have detected your relative has suffered a fall. They are located at  </string>
    <string name="infoAlarm1">We are happy to report that your relative has safely returned home.</string>
    <string name="infoAlarm2">Your relative is currently located at </string>
    <string name="infoAlarm3">Location unavailable</string>
    <string name="infoAlarm4">TeCuidamos: Location update</string>
    <string name="zonaAlarm1">TeCuidamos: Your relative has exited their Safe Zone. They are currently located at </string>
    <string name="zonaAlarm2">TeCuidamos: Safe Zone</string>
    <string name="zonaAlarm3">Your relative has exited their Safe Zone. Their last known location is at </string>
    <string name="nohayavisos">No warnings</string>
    <string name="gestorcaidasactivado">Fall detection service active</string>
    <string name="botones1">Medicines</string>
    <string name="botones2">Settings</string>
    <string name="botones3">Going out!</string>
    <string name="botones4">Stop services</string>
    <string name="botones5">New warning</string>

</resources>