<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ToggleButton
            android:id="@+id/tbAvisos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOff="@string/configactivserviciosdialogoff1"
            android:textOn="@string/configactivserviciosdialogon1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ToggleButton
            android:id="@+id/tbZona"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOff="@string/configactivserviciosdialogoff2"
            android:textOn="@string/configactivserviciosdialogon2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ToggleButton
            android:id="@+id/tbLocalizacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOff="@string/configactivserviciosdialogoff3" 
            android:textOn="@string/configactivserviciosdialogon3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ToggleButton
            android:id="@+id/tbCaidas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOff="@string/configactivserviciosdialogoff4"
            android:textOn="@string/configactivserviciosdialogon4" />
    </LinearLayout>
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ToggleButton
            android:id="@+id/tbCaidasCasa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOff="@string/configactivserviciosdialogoff5"
            android:textOn="@string/configactivserviciosdialogon5" />
    </LinearLayout>

</LinearLayout>