<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo" >

    <Button
        android:id="@+id/bDetener"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:background="@drawable/rojo"
        android:text="@string/botones4"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/bConfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bAvisos"
        android:layout_centerHorizontal="true"
        android:background="@drawable/amarillo"
        android:text="@string/botones2" />

    <Button
        android:id="@+id/bAvisos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/amarillo"
        android:text="@string/botones1" />

    <Button
        android:id="@+id/bSalimos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bDetener"
        android:layout_alignLeft="@+id/bConfig"
        android:layout_marginBottom="15dp"
        android:background="@drawable/azulgrande"
        android:text="@string/botones3"
        android:textColor="#FFFFFF" />

</RelativeLayout>